made changes to website front page

--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -10,6 +10,7 @@
 <body>
   <div>
       <h1>Welcome to Thomas's application</h1>
+      <p>The following Events are available</p>
     {{{body}}}
 </div>
 <div>
